--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="fonts/fonts.css" />
-    <link rel="stylesheet" href="styles/global.css" />
-    <link rel="stylesheet" href="styles/style.css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="fonts/fonts.css">
+    <link rel="stylesheet" href="styles/global.css">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
   <body>
@@ -30,15 +30,16 @@
             <img
               class="header__logo-image"
               src="/images/logo-black.svg"
-              alt="оно тебе надо"/>
+              alt="оно тебе надо"
+              >
           </a>
         </div>
         <address class="address header__address">
-          <a class="address_link" href="tel:+9 999 555 5555">+9 999 555 5555</a>
+          <a class="address_link" href="tel:+99995555555">+9 999 555 5555</a>
           <br>
           <a class="address_link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
           <br>
-          <p class="address_link" class="address_location">наб. Принсенграхт 263- 265, Амстердам</p>
+          <p class="address_location">наб. Принсенграхт 263- 265, Амстердам</p>
         </address>
       </div>
     </header>
@@ -104,7 +105,7 @@
             <div class="about__logo-image"></div>
           </div>
           <div class="about__description">
-            <div class="about__title">об аукционе</div>
+            <h2 class="about__title">об аукционе</h2>
             <div class="about__text">
               <p class="about__text_paragraph_1">
                 Здесь вы не встретите очередное пафосное собрание невероятно
@@ -115,7 +116,7 @@
               </p>
               <p class="about__text_paragraph_2">
                 Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые
-                и непонятые. Когда-то они казались просто неудачными.Но, несмотря на критику, кажущуюся простоту или сложность, сейчас
+                и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас
                 без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их
                 создатели. И сейчас эти лоты стали культовыми.
               </p>
@@ -126,7 +127,7 @@
     </main>
     <footer class="footer">
       <address class="address footer__address">
-        <a class="address_link" href="tel:+9 999 555 5555">+9 999 555 5555</a>
+        <a class="address_link" href="tel:+99995555555">+9 999 555 5555</a>
         <br>
         <a class="address_link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <br>
@@ -158,7 +159,7 @@
         </li>
         <li class="footer__social-list-item">
           <a href="footer__social-link">
-            <img class="footer__social-icon" src="/images/pinterest.svg" alt="pinterest.com"/>
+            <img class="footer__social-icon" src="/images/pinterest.svg" alt="pinterest.com">
           </a>
         </li>
       </ul>
