--- a/index.html
+++ b/index.html
@@ -4,60 +4,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="fonts/fonts.css">
-    <link rel="stylesheet" href="styles/global.css">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
   <body>
     <header class="header">
-      <div class="header_grid_container">
-        <nav class="header__menu">
-          <ul class="header__links-list">
-            <li class="header__links-list-item header__links-list-item_no-bullit">
-              <a class="header__link header__link_active" href="#">главная</a>
-            </li>
-            <li class="header__links-list-item">
-              <a class="header__link" href="#">посмотреть лоты</a>
-            </li>
-            <li class="header__links-list-item">
-              <a class="header__link" href="#">об аукционе</a>
-            </li>
-          </ul>
-        </nav>
-        <div class="header__logo">
-          <a>
-            <img
-              class="header__logo-image"
-              src="/images/logo-black.svg"
-              alt="оно тебе надо"
-              >
-          </a>
-        </div>
-        <address class="address header__address">
-          <a class="address_link" href="tel:+99995555555">+9 999 555 5555</a>
-          <br>
-          <a class="address_link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-          <br>
-          <p class="address_location">наб. Принсенграхт 263- 265, Амстердам</p>
-        </address>
-      </div>
+      <nav class="header__menu">
+        <ul class="header__links-list">
+          <li class="header__links-list-item header__links-list-item_no-bullit">
+            <a class="header__link header__link_active" href="#">главная</a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header__link" href="#">посмотреть лоты</a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header__link" href="#">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+        <a class="header__logo" href="#">
+          <img 
+            class="header__logo-image" 
+            src="./images/logo-black.svg" 
+            alt="оно тебе надо">
+        </a>  
+      <address class="address header__address">
+        <a class="address_link" href="tel:+99995555555">+9 999 555 5555</a>
+        <br>
+        <a class="address_link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p class="address_location">наб. Принсенграхт 263- 265, Амстердам</p>
+      </address>
+      
     </header>
     <main>
       <section class="cover">
         <div class="overlay"></div>
-        <div class="cover__title">
-          <h1 class="cover__title__items">
-            <span class="aligned-text">о<span class="letter-spacing-extended">но</span></span>
-            <span class="aligned-text_center">те<span class="letter-spacing-extended">бе</span></span>
-            <span class="aligned-text_right"><span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span></span>
-          </h1>
-          <div class="cover__description">
-            <p class="cover__description-text">
-              аукцион вещей, в которые никто не верил
-            </p>
-            <button class="bet-button">сделать ставку</button>
-          </div>
+        <h1 class="cover__title">
+          <span class="aligned-text">о<span class="letter-spacing-extended">но</span></span>
+          <span class="aligned-text_center">те<span class="letter-spacing-extended">бе</span></span>
+          <span class="aligned-text_right"><span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span></span>
+        </h1>
+        <div class="cover__description">
+          <p class="cover__description-text">
+            аукцион вещей, в которые никто не верил
+          </p>
+          <button class="bet-button" type="button">сделать ставку</button>
         </div>
       </section>
       <section class="lots">
@@ -95,9 +88,7 @@
             </a>
           </li>
         </ul>
-        <a class="lots__look-more-link" href="#">
-          <p>посмотреть больше</p>
-        </a>
+        <a class="lots__look-more-link" href="#">посмотреть больше</a>
       </section>
       <section class="about">
         <div class="about__column">
@@ -107,14 +98,14 @@
           <div class="about__description">
             <h2 class="about__title">об аукционе</h2>
             <div class="about__text">
-              <p class="about__text_paragraph_1">
+              <p>
                 Здесь вы не встретите очередное пафосное собрание невероятно
                 дорогого антиквариата. Наши лоты вообще не должны были попасть
                 ни на один аукцион. Потому что кому нужен дневник
                 девочки-подростка или картина, которую может нарисовать даже
                 ребёнок? Кому нужны все эти странные вещи, созданные любителями?
               </p>
-              <p class="about__text_paragraph_2">
+              <p>
                 Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые
                 и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас
                 без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их
@@ -130,7 +121,6 @@
         <a class="address_link" href="tel:+99995555555">+9 999 555 5555</a>
         <br>
         <a class="address_link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <br>
         <p class="address_location">наб. Принсенграхт 263- 265, Амстердам</p>
       </address>
       <nav class="footer__menu">
@@ -148,18 +138,24 @@
       </nav>
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
-          <a href="footer__social-link">
-            <img class="footer__social-icon" src="/images/yt.svg" alt="youtube.com">
+          <a href="footer__social-link" target="_blank">
+            <img class="footer__social-icon" 
+            src="./images/yt.svg" 
+            alt="youtube.com">
           </a>
         </li>
         <li class="footer__social-list-item">
-          <a href="footer__social-link">
-            <img class="footer__social-icon" src="/images/vk.svg" alt="vk.ru">
+          <a href="footer__social-link" target="_blank">
+            <img class="footer__social-icon" 
+            src="./images/vk.svg" 
+            alt="vk.ru">
           </a>
         </li>
         <li class="footer__social-list-item">
-          <a href="footer__social-link">
-            <img class="footer__social-icon" src="/images/pinterest.svg" alt="pinterest.com">
+          <a href="footer__social-link" target="_blank">
+            <img class="footer__social-icon" 
+            src="./images/pinterest.svg" 
+            alt="pinterest.com">
           </a>
         </li>
       </ul>
